feat: enable method security and restrict endpoints by role
- Add @EnableMethodSecurity to SecurityConfig for method-level access control
- Add @PreAuthorize("hasAuthority('ROLE_ADMIN')") to GET /api/users endpoint
- Refactor UserService to return UserResponse DTOs instead of User entities
- Add mapToResponse helper to map User -> UserResponse
- Update getAllByTenant to scope query by tenant and stream to UserResponse list
- Update UserController to use renamed service methods and clean up imports